# calcium

./: .gitignore  .gitmodules  Cargo.toml  README.md  cf.s  code.json  code.kson  controlflow  example copy.ca  example.ca  fmt.sh  ful.rs  hw.ca  installext.sh  main.c  main.sh  o  p  reference.c  reference.cxx  reference.md  rt.c  std.c  workspace.toml
.github/workflows/: ci.yml  release.yaml
ca_ast/: Cargo.toml
ca_ast/src/: lib.rs
ca_backend_llvm/: Cargo.toml
ca_backend_llvm/src/: expr.rs  lib.rs  stmt.rs
ca_driver/: Cargo.toml
ca_driver/src/: lib.rs
ca_lexer/: Cargo.toml  code.c
ca_lexer/src/: lib.rs  main.rs
ca_lexer_flex/: .gitignore  Cargo.toml  a.out  build.rs  driver.c  test.z
ca_lexer_flex/src/: lex.l  main.rs
ca_parser/: Cargo.toml  code.rs  gram.rs
ca_parser/src/: gram.lalrpop  lib.rs
ca_parser_bison/: .gitignore  Cargo.toml  build.rs
ca_parser_bison/src/: lexer.rs  lib.rs  loc.rs  main.rs  parser.rs  parser.y  pretty.rs  token.rs  value.rs
ca_tc/: Cargo.toml
ca_tc/src/: lib.rs
ca_uir/: Cargo.toml
ca_uir/src/: lib.rs
ca_vscode/: vsc-extension-quickstart.md
calciumlang/: CHANGELOG.md  README.md  package.json
calciumlang/syntaxes/: calcium.tmLanguage.json
examples/: aux.ca  controlflow.ca  json.ca  main.ca  newline  std.ca  structs.ca  third.ca
examples/tests/: add.ca
src/: ast.rs  example.ca  example2.ca  gram.lalrpop  main.rs
tests/: add.ca  fib.ca  sub.ca
