[package]
name = "calcium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca_ast = {path = "./ca_ast"}
# ca_parser = {path = "./ca_parser"}
ca_parser_bison = {path="./ca_parser_bison"}
# ca_driver = {path="./ca_driver"}
# ca_backend_llvm = {path="./ca_backend_llvm"}
colored = "2.0.0"