[package]
name = "ca_backend_llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca_uir = {path="../ca_uir"}
inkwell = {git = "https://github.com/TheDan64/inkwell/", features=["llvm12-0"]}
debug-cell = "0.1.1"
[dev-dependencies]
inkwell_internals = "0.5.0"
reqwest = { version = "0.9.24", default-features = false, features = ["rustls-tls"] }
