[package]
name = "ca_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca_parser_bison = {path = "../ca_parser_bison"}
ca_uir = {path="../ca_uir"}
ca_tc = {path="../ca_tc"}

clap = "2.33.3"
clap_generate = "3.0.0-beta.5"
ca_backend_llvm = {path="../ca_backend_llvm"}