[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Bison skeleton for Rust"
edition = "2018"
include = ["bison/*.m4", "src/lib.rs", "src/api.rs", "Cargo.toml", "README.md"]
license = "MIT"
name = "ca_parser_bison"
repository = "https://github.com/iliabylich/rust-bison-skeleton"
version = "0.37.0"
[dependencies]
peekmore = "1.0.0"
# ca_lexer = {path="../ca_lexer"}
colored = "2.0.0"
# ca_pretty = {path = "../ca_pretty"}
